ast/src/snapshots/transmute_ast__lexer__tests__keyword_namespace.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Namespace,
    span: 1:1; [0, 9],
}
