ast/src/snapshots/transmute_ast__lexer__tests__keyword_ret.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Ret,
    span: 1:1; [0, 3],
}
