ast/src/snapshots/transmute_ast__lexer__tests__keyword_struct.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Struct,
    span: 1:1; [0, 6],
}
