ast/src/snapshots/transmute_ast__lexer__tests__keyword_true.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: True,
    span: 1:1; [0, 4],
}
