ast/src/snapshots/transmute_ast__lexer__tests__keyword_use.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Use,
    span: 1:1; [0, 3],
}
