ast/src/snapshots/transmute_ast__lexer__tests__keyword_while.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: While,
    span: 1:1; [0, 5],
}
