ast/src/snapshots/transmute_ast__lexer__tests__next_close_bracket.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: CloseBracket,
    span: 1:1; [0, 1],
}
