ast/src/snapshots/transmute_ast__lexer__tests__next_close_curly_bracket.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: CloseCurlyBracket,
    span: 1:1; [0, 1],
}
