ast/src/snapshots/transmute_ast__lexer__tests__next_comma.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Comma,
    span: 1:1; [0, 1],
}
