ast/src/snapshots/transmute_ast__lexer__tests__next_dot.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Dot,
    span: 1:1; [0, 1],
}
